# ragforge

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
data/sample/: qa.jsonl
data/sample/corpus/: python.md  rust.md  transformers.md
docs/adr/: 0001-record-architecture-decisions.md  0002-offline-first-defaults.md  0003-agentic-tool-use-over-context-stuffing.md  0004-two-stage-retrieval-with-reranking.md  0005-hybrid-retrieval-with-rrf.md  0006-mmr-diversification.md
docs/architecture/: 01-context.md  02-container.md  03-component.md  04-code.md  README.md
examples/: quickstart.py
src/ragforge/: __init__.py  cli.py  config.py  logging.py  pipeline.py  types.py
src/ragforge/agent/: __init__.py  rag_agent.py
src/ragforge/api/: __init__.py  app.py  schemas.py
src/ragforge/embeddings/: __init__.py  base.py  hashing.py  voyage.py
src/ragforge/eval/: __init__.py  answer_metrics.py  compare.py  dataset.py  report.py  retrieval_metrics.py  runner.py
src/ragforge/ingestion/: __init__.py  chunking.py  loaders.py
src/ragforge/llm/: __init__.py  anthropic_client.py  base.py  mock.py
src/ragforge/rerank/: __init__.py  base.py  lexical.py  llm_reranker.py
src/ragforge/retrieval/: __init__.py  mmr.py  retriever.py
tests/: test_agent.py  test_agent_streaming.py  test_api.py  test_api_persistence.py  test_chunking.py  test_cli.py  test_compare.py  test_embeddings.py  test_eval.py  test_examples.py  test_factories.py  test_hybrid.py  test_llm_mock.py  test_llm_reranker.py  test_metadata_filter.py  test_mmr.py  test_rerank.py  test_store_and_retrieval.py
(+4 files in other folders)
