[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragforge"
version = "0.1.0"
description = "An agentic Retrieval-Augmented Generation platform with a built-in evaluation harness, built on Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ragforge contributors" }]
keywords = ["rag", "llm", "anthropic", "claude", "agents", "retrieval", "evaluation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "anthropic>=0.40",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
voyage = [
    "voyageai>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
ragforge = "ragforge.cli:main"

[project.urls]
Homepage = "https://github.com/cnfuse/ragforge"
Repository = "https://github.com/cnfuse/ragforge"

[tool.hatch.build.targets.wheel]
packages = ["src/ragforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
packages = ["ragforge"]
mypy_path = "src"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
